--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="loging.message.password">Password</string>
     <string name="loging.button.signup">crear cuenta</string>
     <string name="loging.button.singin">iniciar sesion</string>
+    <string name="loging.error.messagge.signin">Imposible iniciar sesion %s</string>
+    <string name="loging.error.messagge.signup">Imposible crear nuevo usuario %s</string>
+    <string name="loging.notice.signin">Usuario agregado exitosamente</string>
 </resources>
