--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="loging.error.messagge.signin">Imposible iniciar sesion %s</string>
     <string name="loging.error.messagge.signup">Imposible crear nuevo usuario %s</string>
     <string name="loging.notice.signin">Usuario agregado exitosamente</string>
+
+    <string name="contactlist.menu.action.signoff">Cerrar Sesión</string>
+    <string name="contactlist.title">Contactos</string>
 </resources>
